# vault_messanger

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt  какзапустить.txt
backend/accounts/: admin.py  consumers.py  exceptions.py  models.py  responses.py  serializers.py  urls.py  utils.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_profile_email.py  0003_alter_profile_bio.py  0004_profile_last_online.py
backend/backend/: asgi.py  settings.py  urls.py
backend/msg_app/: apps.py  consumers.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/msg_app/migrations/: 0001_initial.py  0002_message_is_edit.py  0003_message_is_read.py
frontend/: .env.example  craco.config.js  jsconfig.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.css  index.js
frontend/src/app/: App.js  router.js
frontend/src/assets/css/: Header.css  ProfilePage.css
frontend/src/assets/css/Messages/: MessagesList.css
frontend/src/assets/css/RegLog/: Registration.css
frontend/src/config/: urls.js
frontend/src/features/Header/: Header.jsx
frontend/src/features/MessagesList/: MessagesList.jsx
frontend/src/hooks/: AuthHook.js  MessagesHook.js  OnlineStatusHook.js
frontend/src/pages/LoginPage/: LoginPage.jsx
frontend/src/pages/MainPage/: MainPage.js
frontend/src/pages/OtherProfilePage/: OtherProfilePage.jsx
frontend/src/pages/ProfilePage/: ProfilePage.jsx
frontend/src/pages/RegistrationPage/: RegistrationPage.jsx
frontend/src/utils/: ProfilePageUtils.js
